# CW_7_DRF

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: tlg.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
